--- a/mobile/assets/map/index.html
+++ b/mobile/assets/map/index.html
@@ -27,14 +27,13 @@
     <body>
         <div style="width: 100%;">
             <button class="btn btn-primary" data-toggle="modal"
-            data-target="#exampleModalCenter">Ajouter</button>
+                data-target="#exampleModalCenter">Ajouter</button>
         </div>
         <div class="shadow io" id="mapp">
         </div>
         <script src="script.js"></script>
     </body>
 </html>
-
 
 <!-- Modal -->
 <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog"
@@ -51,23 +50,29 @@
             </div>
             <div class="modal-body">
                 <div class="form-group">
-                    <label for="capacite_stockage">Capacité de stockage :</label>
-                    <input type="number" class="form-control" id="capacite_stockage" name="capacite_stockage">
+                    <label for="capacite_stockage">Capacité de stockage
+                        :</label>
+                    <input type="number" class="form-control"
+                        id="capacite_stockage" name="capacite_stockage">
                 </div>
-    
+
                 <div class="form-group">
                     <label for="contact">Contact :</label>
-                    <input type="text" class="form-control" id="contact" name="contact">
+                    <input type="text" class="form-control" id="contact"
+                        name="contact">
                 </div>
                 <div class="form-group">
                     <label for="contact">Date de visite :</label>
-                    <input type="text" class="form-control" id="dateVisite" name="dateVisite">
+                    <input type="text" class="form-control" id="dateVisite"
+                        name="dateVisite">
                 </div>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary"
                     data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary" onclick="ajouterPointerEvent()">Ajouter le point de vente</button>
+                <button type="button" class="btn btn-primary"
+                    data-dismiss="modal" onclick="ajouterPointerEvent()">Ajouter
+                    le point de vente</button>
             </div>
         </div>
     </div>
